force-app/main/default/objects/Account/fields/A_loja_tem_fidelidade_com_alguma_marca__c.field-meta.xml
<CustomField>
    <fullName>A_loja_tem_fidelidade_com_alguma_marca__c</fullName>
    <label>A loja tem fidelidade com alguma marca?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>