force-app/main/default/objects/Account/fields/CidadeMesorrregiaoConta__c.field-meta.xml
<CustomField>
    <fullName>CidadeMesorrregiaoConta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade da Mesorregião</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>