force-app/main/default/objects/Account/fields/Classifica_o_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Classifica_o_do_Cliente__c</fullName>
    <formula>IF((ABS(COF__c) &lt;= 0.20), &quot;Fidelizado&quot;,
IF((ABS(COF__c) &gt; 0.20) &amp;&amp;
(ABS(COF__c) &lt;= 0.80), &quot;Pulverizado&quot;,&quot;Concorrente&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classificação do Cliente</label>
    <type>Text</type>
</CustomField>