force-app/main/default/objects/Account/fields/Cliente_comprar_quais_fam_de_produto__c.field-meta.xml
<CustomField>
    <fullName>Cliente_comprar_quais_fam_de_produto__c</fullName>
    <label>Cliente comprará quais fam. de produto?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capota Marítima</fullName>
            </value>
            <value>
                <fullName>Capota Rígida</fullName>
            </value>
            <value>
                <fullName>Estribo</fullName>
            </value>
            <value>
                <fullName>Estribo Elétrico</fullName>
            </value>
            <value>
                <fullName>Santo Antônio</fullName>
            </value>
            <value>
                <fullName>Engate de Reboque</fullName>
            </value>
            <value>
                <fullName>Utilitários</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>