force-app/main/default/objects/Account/fields/CNPJ_sem_formatacao__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_sem_formatacao__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CNPJ__c, &quot;/&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),&quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ sem formatação</label>
    <type>Text</type>
</CustomField>