force-app/main/default/objects/Account/fields/CO1__c.field-meta.xml
<CustomField>
    <fullName>CO1__c</fullName>
    <formula>IF(qtde_c1__c = 0, 0, qtde_c1__c / (qtde_c1__c + qtde_ko1__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% STO Compra de Outros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>