force-app/main/default/objects/Account/fields/CO2__c.field-meta.xml
<CustomField>
    <fullName>CO2__c</fullName>
    <formula>IF(qtde_c2__c = 0, 0, qtde_c2__c / (qtde_c2__c + qtde_ko2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% ER Compra de Outros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>