force-app/main/default/objects/Account/fields/CO3__c.field-meta.xml
<CustomField>
    <fullName>CO3__c</fullName>
    <formula>IF(qtde_c3__c = 0, 0, qtde_c3__c / (qtde_c3__c + qtde_ko3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% EST Compra de Outros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>