force-app/main/default/objects/Account/fields/Codigo_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_cliente__c</fullName>
    <label>Código do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>