force-app/main/default/objects/Account/fields/codigoCondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>codigoCondicaoPagamento__c</fullName>
    <label>Código de Condição de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2110</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>234</fullName>
            </value>
            <value>
                <fullName>334</fullName>
            </value>
            <value>
                <fullName>995</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>245</fullName>
            </value>
            <value>
                <fullName>345</fullName>
            </value>
            <value>
                <fullName>445</fullName>
            </value>
            <value>
                <fullName>545</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
            <value>
                <fullName>460</fullName>
            </value>
            <value>
                <fullName>560</fullName>
            </value>
            <value>
                <fullName>761</fullName>
            </value>
            <value>
                <fullName>375</fullName>
            </value>
            <value>
                <fullName>475</fullName>
            </value>
            <value>
                <fullName>358</fullName>
            </value>
            <value>
                <fullName>775</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>