force-app/main/default/objects/Account/fields/CodTotvs__c.field-meta.xml
<CustomField>
    <fullName>CodTotvs__c</fullName>
    <description>Código da conta no sistema Totvs</description>
    <inlineHelpText>Código da conta no sistema Totvs</inlineHelpText>
    <label>CodTotvs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>