force-app/main/default/objects/Account/fields/COF__c.field-meta.xml
<CustomField>
    <fullName>COF__c</fullName>
    <formula>(if(qtde_c1__c = 0, 0, 
(qtde_c1__c / (qtde_c1__c + qtde_ko1__c))) + 
if(qtde_c2__c = 0, 0, 
(qtde_c2__c / (qtde_c2__c + qtde_ko2__c))) +
if(qtde_c3__c = 0, 0,
(qtde_c3__c / (qtde_c3__c + qtde_ko3__c))) + 
if(qtde_c4__c = 0, 0,
(qtde_c4__c / (qtde_c4__c + qtde_ko4__c))) +
if(qtde_c5__c = 0, 0,
(qtde_c5__c / (qtde_c5__c + qtde_ko5__c))) +
if(qtde_c6__c = 0, 0,
(qtde_c6__c / (qtde_c6__c + qtde_ko6__c))) +
if(qtde_c7__c = 0, 0,
(qtde_c7__c / (qtde_c7__c + qtde_ko7__c))) 
)
/
Conta_Perc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Compra Outras Fontes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>