force-app/main/default/objects/Account/fields/comoPorQueLeadChegouKeko__c.field-meta.xml
<CustomField>
    <fullName>comoPorQueLeadChegouKeko__c</fullName>
    <label>Como e por que o Lead chegou até a KEKO?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>