force-app/main/default/objects/Account/fields/Compra_fonte_cr__c.field-meta.xml
<CustomField>
    <fullName>Compra_fonte_cr__c</fullName>
    <label>Compra de qual fonte?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Somente Original</fullName>
            </value>
            <value>
                <fullName>Somente Keko</fullName>
            </value>
            <value>
                <fullName>Original e Keko</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>