force-app/main/default/objects/Account/fields/Compra_fonte_es__c.field-meta.xml
<CustomField>
    <fullName>Compra_fonte_es__c</fullName>
    <label>Compra de qual fonte?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Somente Original</fullName>
            </value>
            <value>
                <fullName>Somente Keko</fullName>
            </value>
            <value>
                <fullName>Original e Keko</fullName>
            </value>
            <value>
                <fullName>Bepo</fullName>
            </value>
            <value>
                <fullName>Track</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>CCF</fullName>
            </value>
            <value>
                <fullName>C&amp;K</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Terceirizadora</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>