force-app/main/default/objects/Account/fields/Compra_mensal_pretendida_na_abertura_da__c.field-meta.xml
<CustomField>
    <fullName>Compra_mensal_pretendida_na_abertura_da__c</fullName>
    <label>Compra mensal pretendida abertura conta</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>