force-app/main/default/objects/Account/fields/Conta_Perc__c.field-meta.xml
<CustomField>
    <fullName>Conta_Perc__c</fullName>
    <label>Conta Perc</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>