force-app/main/default/objects/Account/fields/Contribuinte_de_ICMS__c.field-meta.xml
<CustomField>
    <fullName>Contribuinte_de_ICMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contribuinte de ICMS</label>
    <type>Checkbox</type>
</CustomField>