force-app/main/default/objects/Account/fields/Data_do_ultimo_faturamento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_ultimo_faturamento__c</fullName>
    <label>Data do último faturamento</label>
    <type>Date</type>
</CustomField>