force-app/main/default/objects/Account/fields/De_quem_a_loja_compra_hojee__c.field-meta.xml
<CustomField>
    <fullName>De_quem_a_loja_compra_hojee__c</fullName>
    <label>De quem a loja compra hoje?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>