force-app/main/default/objects/Account/fields/Desconto_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>Desconto_do_cliente__c</fullName>
    <label>Desconto do cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>