force-app/main/default/objects/Account/fields/Descricao_da_loja__c.field-meta.xml
<CustomField>
    <fullName>Descricao_da_loja__c</fullName>
    <inlineHelpText>Descrever em breve texto os seguintes aspectos: tamanho da loja, diferenciais, tempo de atuação, com quais produtos e marcas trabalha e o que mais entender importante.</inlineHelpText>
    <label>Descrição da loja</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>