force-app/main/default/objects/Account/fields/email_comercial__c.field-meta.xml
<CustomField>
    <fullName>email_comercial__c</fullName>
    <label>Email comercial</label>
    <required>true</required>
    <type>Email</type>
</CustomField>