force-app/main/default/objects/Account/fields/email_DANFE_xml__c.field-meta.xml
<CustomField>
    <fullName>email_DANFE_xml__c</fullName>
    <inlineHelpText>Caso você deseje que seu cliente receba uma cópia da Nota Fiscal, preencha esse campo. Pode ser o mesmo email do comercial.</inlineHelpText>
    <label>Email DANFE xml</label>
    <type>Email</type>
</CustomField>