force-app/main/default/objects/Account/fields/email_financeiro__c.field-meta.xml
<CustomField>
    <fullName>email_financeiro__c</fullName>
    <label>Email financeiro</label>
    <required>true</required>
    <type>Email</type>
</CustomField>