force-app/main/default/objects/Account/fields/Emite_Boleto__c.field-meta.xml
<CustomField>
    <fullName>Emite_Boleto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emite Boleto</label>
    <type>Checkbox</type>
</CustomField>