force-app/main/default/objects/Account/fields/Emite_Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Emite_Etiqueta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emite Etiqueta</label>
    <type>Checkbox</type>
</CustomField>