force-app/main/default/objects/Account/fields/Endereco_de_entrega_igual_ao_de_cobranca__c.field-meta.xml
<CustomField>
    <fullName>Endereco_de_entrega_igual_ao_de_cobranca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endereço de entrega igual ao de cobrança</label>
    <type>Checkbox</type>
</CustomField>