force-app/main/default/objects/Account/fields/EntregaBairro__c.field-meta.xml
<CustomField>
    <fullName>EntregaBairro__c</fullName>
    <label>Bairro de Entrega</label>
    <length>100</length>
    <type>Text</type>
</CustomField>