force-app/main/default/objects/Account/fields/F_Visita__c.field-meta.xml
<CustomField>
    <fullName>F_Visita__c</fullName>
    <label>Frequência Visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opcional</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
            <value>
                <fullName>Bimestral</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>