force-app/main/default/objects/Account/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>