force-app/main/default/objects/Account/fields/haQuantoTempoLojaExiste__c.field-meta.xml
<CustomField>
    <fullName>haQuantoTempoLojaExiste__c</fullName>
    <label>Há quanto tempo a loja existe?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>