force-app/main/default/objects/Account/fields/IMG__c.field-meta.xml
<CustomField>
    <fullName>IMG__c</fullName>
    <formula>if(ISPICKVAL(F_Visita__c, &quot;Mensal&quot;), 
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068HY000000KUbv&amp;operationContext=CHATTER&amp;contentId=05THY000000T7gH&quot;,&quot;Green&quot;)
,
if(ISPICKVAL(F_Visita__c, &quot;Bimestral&quot;), 
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068HY000000KUbl&amp;operationContext=CHATTER&amp;contentId=05THY000000T6Rn&quot;,&quot;Orange&quot;)
,
if(ISPICKVAL(F_Visita__c, &quot;Trimestral&quot;), 
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068HY000000KUrQ&amp;operationContext=CHATTER&amp;contentId=05THY000000T8Ex&quot;,&quot;Yellow&quot;)
,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068HY000000KUbg&amp;operationContext=CHATTER&amp;contentId=05THY000000T7fd&quot;,&quot;Red&quot;)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequência</label>
    <type>Text</type>
</CustomField>