force-app/main/default/objects/Account/fields/IntegracaoTotvs__c.field-meta.xml
<CustomField>
    <fullName>IntegracaoTotvs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a conta foi integrada com sucesso a Totvs.</description>
    <label>Integração Totvs</label>
    <type>Checkbox</type>
</CustomField>