force-app/main/default/objects/Account/fields/Justifique__c.field-meta.xml
<CustomField>
    <fullName>Justifique__c</fullName>
    <label>Justifique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>